# PatchProjection

./: .gitignore  .gitmodules  CMakeLists.txt  Example.cpp  PatchProjection.h  PatchProjection.hpp
Tests/: CMakeLists.txt  ProjectionMatrixTiming.cpp  TestPatchProjection.cpp
